--- a/styles/main.css
+++ b/styles/main.css
@@ -79,6 +79,9 @@ body {
         align-items: center;
         padding: 20px 30px 20px 10px;
     }
+    .logo {
+        margin: 20px 0px 20px 30px;
+    }
     .list {
         margin: 0px;
     }
