--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,5 @@
 body {
     height: 100vh;
-    width: 100vw;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
@@ -10,9 +9,12 @@ body {
 }
 
 /* cabecera */
+
 .header {
-    width: 100vw;
+    
     position: fixed;
+    left: 0;
+    right: 0;
     top: 0;
     background-color: white;
     display: flex;
@@ -21,18 +23,20 @@ body {
 }
 
 /* logo */
+
 .logo {
     background-image: url("../images/logo_adalab_155x61.png");
     height: 61px;
     width: 155px;
-    align-self: center;
+    margin: 10px auto;
 }
 
 /* menu */
+
 .list {
 
     height: 16px;
-    margin: 10px 0px 13px 0px;
+    margin: 0px 0px 13px 0px;
     transform: translate(-20px);
     list-style-type: none;
     display: flex;
@@ -53,8 +57,9 @@ body {
 /* cuerpo principal */
 
 .main {
-    height: 86vh;
-    margin-top: 110px;
+    height: 100%;
+    width: 300px;
+    margin: 0 auto;
     font-size: 30px;
     font-weight: bold;
     color: #FFFFFF;
@@ -62,12 +67,9 @@ body {
     display: flex;
     flex-flow: column;
     justify-content: center;
-    /* position: absolute;
-    top: 40%;
-    left: 25%;
-    right: 25%; */
-    
 }
+
+
 
 /* pantalla tablet y desktop */
 
@@ -77,21 +79,18 @@ body {
         flex-flow: row ;
         justify-content: space-between;
         align-items: center;
-        padding: 20px 0px 20px 0px;
+        padding: 20px 0px 20px 30px;
     }
     .logo {
-        margin: 20px 0px 20px 30px;
+        margin: 0px;
     }
     .list {
         margin: 0px;
-        margin-right: 30px;
+        padding: 0px;
     }
 
     .list-item {    
         font-size: 16px;
-    }
-    .btn-contacto {
-        
     }
     
     .main {
